Fix for the image of the Plan Your Vacation and Newsletter which were displayed too big.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -41,7 +41,7 @@ h2{
 
 h3{
     font-family: 'Ubuntu', sans-serif;
-    font-size: 3rem;
+    font-size: 2.5rem;
     text-transform: uppercase;
     color: orange;
     padding-bottom: 2rem;
@@ -190,7 +190,6 @@ main figure img
     left: 20%;
     transform: translate( -15%, -50% );
     padding: 1rem;
-    /*background: rgba(0,0,0,.5);*/
 
     gap: 1rem;
 }
@@ -215,7 +214,7 @@ main figure img
     gap:1rem;
 
 }
-#aside_section aside figure img
+#aside_section figure img
 {
     width: 100%;
 }
